<resources>
    <string name="app_name">NBA Game Ready</string>
    <string name="tweet">Tweet</string>
    <string name="get_your_alerts_here">Get your alerts here!</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="game_ready">Game Ready</string>
    <string name="nba">NBA</string>
    <string name="alerts_here">alerts here!</string>
    <string name="get_your">Get your</string>
    <string name="home_team">home_team</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="team_playing_alert">Your favorite teams is playing today!</string>
    <string name="team_notifications_id">team_id</string>
    <string name="team_notifications_name">Team Alerts</string>
    <string name="message_subscribe">You will now receive alerts when this team plays</string>
    <string name="notification_title">Favorite Teams Alert</string>
    <string name="snooze">Snooze</string>
</resources>